Implementation of new User API endpoints
